# forca

./: .gitignore  CMakeLists.txt  ForcasBlocks.cbp  ForcasBlocks.depend  ForcasBlocks.layout  LogicaParaForca_arquivo.md  Menu-interativo.cbp  README.md  VerificarPossiveisAlterações.md  animais  build.bat  build.sh  forca.c  forca.h  forca_arquivo.c  forca_dados.c  forca_desenha.c  forca_jogar.c  forca_string.c  main.c  menu.c  programacao  readme.md  tecnologia  tecnologia.c  windows_linux.c
banco_palavras/: animais
docs/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  forca_8h.html  forca_8h.js  forca_8h_source.html  forca__data_8c.html  forca__data_8c.js  forca__draw_8c.html  forca__draw_8c.js  forca__draw_8h.html  forca__draw_8h.js  forca__draw_8h_source.html  forca__game_8c.html  forca__game_8c.js  forca__system_8c.html  forca__system_8c.js  forca__system_8h.html  forca__system_8h.js  forca__system_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8c.html  navtreedata.js  navtreeindex0.js  structDraw.html  (+5 more)
src/: animais.c  forca.h  forca_animais.c  forca_arquivo.c  forca_arquivo.h  forca_dados.c  forca_data.c  forca_desenha.c  forca_desenha.h  forca_draw.c  forca_draw.h  forca_game.c  forca_jogar.c  forca_palavras.c  forca_palavras.h  forca_programacao.c  forca_string.c  forca_string.h  forca_system.c  forca_system.h  forca_tecnologia.c  main.c  palavras.c  programacao.c  system_compatible.h  tecnologia.c  windows_linux.c  windows_linux.h
(+42 files in other folders)
